--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server "
   },
   "keywords": [],
   "author": "Kevin",
@@ -16,13 +16,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "es6-promise": "^4.2.4",
+    "fetch-jsonp": "^1.1.3",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^3.2.1"
   }
 }
