--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "standard",
+    "beatty":"standard --fix",
     "dev": "webpack-dev-server "
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
+    "standard": "^11.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^1.0.1",
     "webpack": "^3.5.4",
